fixed footer on mobile, restructured landing component

--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -1,5 +1,6 @@
 .footer {
     position: relative;
+    display: flex;
     font-size: 18px;
     background-color: khaki;
     text-align: center;
