--- a/components/Landing/Landing.module.scss
+++ b/components/Landing/Landing.module.scss
@@ -1,27 +1,106 @@
-.home {
+.landing {
+    display: flex;
     position: relative;
     height: 100vh;
-    // height: 800px;
-    min-height: 500px;
     width: 100%;
-    // text-align: center;
-    overflow: hidden;
-    display: flex;
+    text-align: center;
     align-items: center;
     background-color: #191919;
     animation: delayedRemoveBg 5s;
     animation-delay: 2s;
     animation-fill-mode: forwards;
-}
 
-.home canvas {
-    // background-color: aqua;
-    // visibility: hidden;
-    opacity: 0;
-    // animation: 0s ease 2s forwards delayedShow;
-    animation: delayedOpacity;
-    animation-delay: 0.5s;
-    animation-fill-mode: forwards;
+    canvas {
+        opacity: 0;
+        animation: delayedOpacity;
+        animation-delay: 0.5s;
+        animation-fill-mode: forwards;
+    }
+
+    &_headline {
+        font-size: 96px;
+        line-height: 0.8;
+        font-weight: bold;
+        text-shadow: 6px 6px 2px red;
+        color: #fff;
+        // letter-spacing: -2px;
+        margin: 0;
+        // margin: 0 auto 16px auto;
+
+        @media (min-width: 576px) {
+            font-size: 136px;
+            letter-spacing: -2px;
+            line-height: 1.15;
+        }
+    }
+
+    &_aboutText {
+        font-size: 32px;
+        margin: 32px auto 56px auto;
+
+        @media (min-width: 576px) {
+            width: 70%;
+            margin: 32px auto;
+        }
+
+        span:first-child {
+            background-color: #191919;
+            color: white;
+            letter-spacing: 1px;
+        }
+    }
+
+    &_links {
+        list-style-type: none;
+        padding: 0;
+        display: flex;
+        justify-content: space-between;
+        width: 240px;
+        margin: 24px auto;
+
+        a {
+            display: inline-flex;
+            align-items: baseline;
+            font-size: 32px;
+            color: blue;
+            background-color: white;
+            padding: 4px 8px;
+            box-shadow: 6px 6px red;
+            transition: box-shadow 0.2s ease-in-out;
+
+            svg {
+                margin-right: 8px;
+            }
+
+            &:hover {
+                box-shadow: 8px 8px red;
+            }
+        }
+    }
+
+    &_scrolldown {
+        position: absolute;
+        bottom: 30px;
+        left: 50%;
+        margin-left: -29px;
+        color: #fff;
+        display: block;
+        height: 42px;
+        width: 42px;
+        font-size: 42px;
+        line-height: 42px;
+        color: #fff;
+        border-radius: 100%;
+        transition: all 0.3s ease-in-out;
+
+        a {
+            color: #fff;
+
+            &:hover {
+                border-bottom: 6px solid red;
+            }
+        }
+    }
 }
 
 @keyframes delayedOpacity {
@@ -33,111 +112,5 @@
 @keyframes delayedRemoveBg {
     to {
         background-color: transparent;
-    }
-}
-
-/* vertically center banner section */
-/* .home:before {
-    content: "";
-    display: inline-block;
-    vertical-align: middle;
-    height: 100%;
-} */
-
-.home .banner {
-    font-family: var(--vt323-font);
-    // display: inline-block;
-    // vertical-align: middle;
-    margin: 0 auto;
-    width: 85%;
-    // padding-bottom: 30px;
-    text-align: center;
-}
-
-// .home .bannerText {
-//     width: 100%;
-// }
-
-.home .headline {
-    font-size: 136px;
-    font-weight: bold;
-    text-shadow: 6px 6px 2px red;
-    color: #fff;
-    letter-spacing: -2px;
-    margin: 0 auto 18px auto;
-}
-
-.home .bannerText h3 {
-    // font-family: var(--vt323-font);
-    font-size: 32px;
-    // color: #ddd;
-    margin: 0 auto;
-    width: 70%;
-
-    span:first-child {
-        background-color: #191919;
-        color: white;
-        letter-spacing: 1px;
-    }
-}
-
-/* .home .bannerText hr {
-    width: 60%;
-    margin: 18px auto 24px auto;
-    border-color: #2f2d2e;
-    border-color: rgba(150, 150, 150, 0.1);
-} */
-
-/* header social links */
-.home .social {
-    list-style-type: none;
-    padding: 0;
-    display: flex;
-    justify-content: space-between;
-    width: 240px;
-    margin: 24px auto;
-
-    a {
-        display: inline-flex;
-        align-items: baseline;
-        font-size: 32px;
-        color: blue;
-        background-color: white;
-        padding: 4px 8px;
-        box-shadow: 6px 6px red;
-        transition: box-shadow 0.2s ease-in-out;
-
-        svg {
-            margin-right: 8px;
-        }
-
-        &:hover {
-            box-shadow: 8px 8px red;
-        }
-    }
-}
-
-/* scrolldown link */
-.home .scrolldown {
-    position: absolute;
-    bottom: 30px;
-    left: 50%;
-    margin-left: -29px;
-    color: #fff;
-    display: block;
-    height: 42px;
-    width: 42px;
-    font-size: 42px;
-    line-height: 42px;
-    color: #fff;
-    border-radius: 100%;
-    transition: all 0.3s ease-in-out;
-
-    a {
-        color: #fff;
-    
-        &:hover {
-            border-bottom: 6px solid red;
-        }
     }
 }
