--- a/components/Repos/Repos.module.scss
+++ b/components/Repos/Repos.module.scss
@@ -1,4 +1,5 @@
 .repos {
+    display: flex;
     background-color: whitesmoke;
     padding: 48px 0 32px;
 }
